Formulario registro terminado y login desarrollo

--- a/Sesiones/index.html
+++ b/Sesiones/index.html
@@ -10,11 +10,11 @@
     <form action="FormRegistro.php" method="post">
 
                 <label for="name">Nombre de usuari@:</label>
-                <input type="text" id="username" name="user_name">
+                <input type="text" id="username" name="user_name" required>
 
             <br>
                 <label for="email">Correo electrónico:</label>
-                <input type="email" name="email">
+                <input type="email" name="email" required>
 
             <br>
                 <label for="password">Contraseña:</label>
